--- a/public/games/unfair-mario/index.html
+++ b/public/games/unfair-mario/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Unfair Mario - Interstellar</title>
+    <title>Unfair Mario - Cosmic</title>
 </head>
 <body>
     <div id="container"> </div>
