--- a/public/games/stickman-hook/index.html
+++ b/public/games/stickman-hook/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Stickman Hook - Interstellar</title>
+    <title>Stickman Hook - Cosmic</title>
     <script src="assets/js/main.js"></script>
     <meta
       name="viewport"
