--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
             <div id="closeIcon" style="display: none;">
             </div>
             <div class="title-wrap" style="padding-left: 0px;>
-              <h4 style="text-align: center">Made by Podcast14 + Talo</h4>
+              <h4 style="text-align: center">Made by Podcast14 + Talo <br> + CoastalExpert54</h4>
             </div>
             <div class="content-wrap">
               <div class="msg-wrap" style="text-align: center">
