--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,9 @@
     	<link rel="stylesheet" href="assets/css/home/cookie_consent.css">
         <link rel="stylesheet" href="assets/css/nav.css">
 <link href="css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Dosis:wght@800&display=swap" rel="stylesheet">
     	<script src="assets/js/index.js"></script>
    	<script src="assets/js/main.js"></script>
 	<script src="/assets/js/themecontrol.js"></script>
@@ -66,7 +69,7 @@
     <div class="container">
       
         <div class="mainhead">
-                <div class="title"><h1>Cosmic</h1></div>
+                <div style="font-family: 'Dosis', sans-serif; font-weight: 800;" class="title"><h1>Cosmic</h1></div>
                 <button class="discord-btn2">Making School more fun</button>
               </div>
       <div class="link-gen">
