--- a/src/admin.html
+++ b/src/admin.html
@@ -84,9 +84,19 @@
   </div>
       <div class="row">
             <div class="span1">
-             <div style="padding-top: 5px;" class="card animals" loading="lazy"><a class="game" onclick="go('https://mem.rip/kahoot/')">
+             <div style="padding-top: 5px;" class="card animals" loading="lazy"><a class="game" onclick="go('dashboard.render.com')">
                 <img style="border-radius: 25px;" src="/assets/images/icons/kahoot.png"></a>
-              <p3>Kahoot Hack</p3>
+              <p3>Render</p3>
+             </div>
+           </div>
+         </div>
+         </div>
+         </div>
+       <div class="row">
+            <div class="span1">
+             <div style="padding-top: 5px;" class="card animals" loading="lazy"><a class="game" onclick="go('https://code.visualstudio.com')">
+                <img style="border-radius: 25px;" src="/assets/images/icons/kahoot.png"></a>
+              <p3>Visual Studio Code</p3>
              </div>
            </div>
          </div>
