--- a/src/admin.html
+++ b/src/admin.html
@@ -94,7 +94,7 @@
          </div>
        <div class="row">
             <div class="span1">
-             <div style="padding-top: 5px;" class="card animals" loading="lazy"><a class="game" onclick="go('https://code.visualstudio.com')">
+             <div style="padding-top: 5px;" class="card animals" loading="lazy"><a class="game" onclick="go('https://vscode.dev/')">
                 <img style="border-radius: 25px;" src="/assets/images/icons/kahoot.png"></a>
               <p3>Visual Studio Code</p3>
              </div>
