--- a/src/admin.html
+++ b/src/admin.html
@@ -85,7 +85,7 @@
       <div class="row">
             <div class="span1">
              <div style="padding-top: 5px;" class="card animals" loading="lazy"><a class="game" onclick="go('dashboard.render.com')">
-                <img style="border-radius: 25px;" src="/assets/images/icons/kahoot.png"></a>
+                <img style="border-radius: 25px;" src="https://render.com/favicon.ico"></a>
               <p3>Render</p3>
              </div>
            </div>
@@ -95,7 +95,7 @@
        <div class="row">
             <div class="span1">
              <div style="padding-top: 5px;" class="card animals" loading="lazy"><a class="game" onclick="go('https://vscode.dev/')">
-                <img style="border-radius: 25px;" src="/assets/images/icons/kahoot.png"></a>
+                <img style="border-radius: 25px;" src="https://code.visualstudio.com/favicon.ico"></a>
               <p3>Visual Studio Code</p3>
              </div>
            </div>
