--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,8 @@
   gtag('js', new Date());
   gtag('config', 'G-WKJQ5QHQTJ');
 </script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1708278953429867"
+     crossorigin="anonymous"></script>
 </head>
 <body>
   <div class="header2">
