--- a/src/admin.html
+++ b/src/admin.html
@@ -85,7 +85,7 @@
       <div class="row">
             <div class="span1">
              <div style="padding-top: 5px;" class="card animals" loading="lazy"><a class="game" onclick="go('dashboard.render.com')">
-                <img style="border-radius: 25px;" src="https://render.com/favicon.ico"></a>
+                <img style="border-radius: 25px;" src="https://render.com/favicon.svg?v=4ab9a3fc5e06e2253bb579a9609a1ecc"></a>
               <p3>Render</p3>
              </div>
            </div>
