--- a/src/games.html
+++ b/src/games.html
@@ -453,6 +453,30 @@ searchbar.addEventListener("input", function() {
     </div>
   </div>
 </div>
+<div class="row">
+  <div class="span1">
+      <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://www.friv.com/z/games/bobtherobber/index-x.html')">
+    <img style="border-radius: 25px;" src="https://i.imgur.com/oxdKk2L.jpg"></a>
+      <p3>Bob the Robber</p3>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="span1">
+      <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://szhong.4399.com/4399swf//upload_swf/ftp43/chenling/20230516/9/index.htm')">
+    <img style="border-radius: 25px;" src="https://i.imgur.com/6yT7e3K.png"></a>
+      <p3>Bouncy Slime</p3>
+    </div>
+  </div>
+</div>
+<div class="row shooter">
+  <div class="span1">
+      <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://bulletforceunblocked.github.io/')">
+    <img style="border-radius: 25px;" src="https://i.imgur.com/KfkphtG.png"></a>
+      <p3>Bullet Force</p3>
+    </div>
+  </div>
+</div>
 <div class="row cars">
   <div class="span1">
       <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://www.abcya.com/games/create_and_build_car')">
@@ -524,11 +548,30 @@ searchbar.addEventListener("input", function() {
 </div>
 <div class="row">
   <div class="span1">
+      <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://g.igroutka.ru/games/164/UNRPFuoLQvSltA1a/1/blumgi_castle/')">
+        <img style="border-radius: 25px;" src="https://i.imgur.com/ec9H5eA.jpg"></a>
+      <p3>Castle</p3>
+    </div>
+  </div>
+</div>
+</div>
+<div class="row">
+  <div class="span1">
       <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://4iapq88o5f3gc1dij3it0mp5jojnm3jr-a-sites-opensocial.googleusercontent.com/gadgets/ifr?url=https://s3.amazonaws.com/production-assetsbucket-8ljvyr1xczmb/1ee20621-61bc-4ec8-a8ec-5e839c2e6edc%252Fcat-ninja.xml')">
         <img style="border-radius: 25px;" src="/assets/images/icons/cat-ninja.webp"></a>
       <p3>Cat Ninja</p3>
     </div>
   </div>
+</div>
+</div>
+<div class="row">
+  <div class="span1">
+      <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://szhong.4399.com/4399swf//upload_swf/ftp37/cwb/20211025/03/index.html')">
+    <img style="border-radius: 25px;" src="https://i.imgur.com/QOFZjZ7.png" ></a>
+      <p3>Catch the Candy</p3>
+    </div>
+  </div>
+</div>
 </div>
 </div>
 <div class="row">
@@ -576,6 +619,16 @@ searchbar.addEventListener("input", function() {
       <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://ubg77.github.io/edit/demolition-derby-crash-racing/')">
     <img style="border-radius: 25px;" src="/assets/images/icons/crash-racing.png" ></a>
       <p3>Crash Racing</p3>
+    </div>
+  </div>
+</div>
+</div>
+</div>
+<div class="row cars">
+  <div class="span1">
+      <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://g.igroutka.ru/games/164/2afwOT8yZFmeYWGJ/2/crazy_cars/')">
+    <img style="border-radius: 25px;" src="https://i.imgur.com/IxUXoAS.png" ></a>
+      <p3>Crazy Cars</p3>
     </div>
   </div>
 </div>
@@ -712,6 +765,17 @@ searchbar.addEventListener("input", function() {
         <img style="border-radius: 25px;" src="https://i.imgur.com/C57Dy1b.png" ></a>
        <!-- /assets/images/icons/dunk-brush.png -->
       <p3>Dunk Brush</p3>
+     </div>
+   </div>
+ </div>
+ </div>
+ </div>
+<div class="row sports">
+  <div class="span1">
+     <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a class="game" onclick="go('https://g.igroutka.ru/games/164/DXUY0PdIruNOzyM8/dunkers/')">
+        <img style="border-radius: 25px;" src="https://i.imgur.com/ZGaqxhY.jpg" ></a>
+       <!-- /assets/images/icons/dunk-brush.png -->
+      <p3>Dunkers</p3>
      </div>
    </div>
  </div>
@@ -1472,6 +1536,15 @@ searchbar.addEventListener("input", function() {
   </div>
 </div>
 </div>
+<div class="row idle">
+  <div class="span1">
+      <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://mathgames66.github.io/othergames/paperio2/index.html')">
+        <img style="border-radius: 25px;" src="https://i.imgur.com/kfxS5aK.jpg"></a>
+      <p3>Paper.io 2</p3>
+    </div>
+  </div>
+</div>
+</div>
 <div class="row">
   <div class="span1">
       <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://f.kbhgames.com/r/n64/game.php?file=Paper%20Mario%20(USA).zip')">
@@ -1838,6 +1911,16 @@ searchbar.addEventListener("input", function() {
       <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://ubg77.github.io/edit/super-bike-the-champion/')">
         <img style="border-radius: 25px;" src="https://i.imgur.com/NMZNGOt.png"></a>
       <p3>Super Bike</p3>
+    </div>
+  </div>
+</div>
+</div>
+</div>
+<div class="row cars">
+  <div class="span1">
+      <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://www.mathplayground.com/pp-superbike-hero/index.html')">
+        <img style="border-radius: 25px;" src="https://i.imgur.com/GxTr4QD.png"></a>
+      <p3>Superbike Hero</p3>
     </div>
   </div>
 </div>
