--- a/src/games.html
+++ b/src/games.html
@@ -247,7 +247,7 @@ searchbar.addEventListener("input", function() {
      <div class="row idle">
       <div class="span1">
          <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a class="game" onclick="go('https://hgentry.github.io/1/')">
-            <img style="border-radius: 25px;" src="https://i.imgur.com/C4MurlE.png" ></a>
+            <img style="border-radius: 25px;" src="/assets/images/icons/1.png" ></a>
           <p3>2048</p3>
          </div>
        </div>
@@ -255,7 +255,7 @@ searchbar.addEventListener("input", function() {
          <div class="row shooter 2p">
            <div class="span1">
               <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a class="game" onclick="go('https://1v1.lol')">
-                 <img style="border-radius: 25px;" src="https://i.imgur.com/93FqGKs.png" ></a>
+                 <img style="border-radius: 25px;" src="/assets/images/icons/1v1-lol.png" ></a>
                 <!-- /assets/images/icons/1v1.png -->
                <p3>1v1.LOL</p3>
               </div>
@@ -549,7 +549,7 @@ searchbar.addEventListener("input", function() {
 <div class="row">
   <div class="span1">
       <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://g.igroutka.ru/games/164/UNRPFuoLQvSltA1a/1/blumgi_castle/')">
-        <img style="border-radius: 25px;" src="https://i.imgur.com/ec9H5eA.jpg"></a>
+        <img style="border-radius: 25px;" src="/assets/images/icons/castelwars.png"></a>
       <p3>Castle</p3>
     </div>
   </div>
@@ -688,7 +688,7 @@ searchbar.addEventListener("input", function() {
 <div class="row idle">
   <div class="span1">
       <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://diep.io/')">
-        <img style="border-radius: 25px;" src="https://i.imgur.com/Om1jg8p.png"></a>
+        <img style="border-radius: 25px;" src="/assets/images/icons/diep.png"></a>
         <!-- /assets/images/icons/diep.png -->
       <p3>Diep.io</p3>
     </div>
@@ -699,7 +699,7 @@ searchbar.addEventListener("input", function() {
 <div class="row">
   <div class="span1">
       <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://dogeminer.se/')">
-        <img style="border-radius: 25px;" src="https://i.imgur.com/bIFke4F.png"></a>
+        <img style="border-radius: 25px;" src="/assets/images/icons/doge-miner-1.png"></a>
         <!-- /assets/images/icons/doge-miner-1.png -->
       <p3>Doge Miner 1</p3>
     </div>
@@ -709,7 +709,7 @@ searchbar.addEventListener("input", function() {
 <div class="row">
   <div class="span1">
       <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://donitz.itch.io/dreader'); load(); mouse()">
-        <img style="border-radius: 25px;" src="https://i.imgur.com/xx8EKqI.png"></a>
+        <img style="border-radius: 25px;" src="/assets/images/icons/dreader.png"></a>
         <!-- /assets/images/icons/dreader.png -->
       <p3>Dreader</p3>
     </div>
@@ -730,7 +730,7 @@ searchbar.addEventListener("input", function() {
 <div class="row cars">
   <div class="span1">
       <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://webglmath.github.io/drift-hunters/'); load()">
-        <img style="border-radius: 25px;" src="https://i.imgur.com/quQQvWG.png"></a>
+        <img style="border-radius: 25px;" src="/assets/images/icons/drift-hunters.png"></a>
         <!-- /assets/images/icons/drift-hunters.png -->
       <p3>Drift Hunters</p3>
     </div>
@@ -741,7 +741,7 @@ searchbar.addEventListener("input", function() {
 <div class="row cars">
   <div class="span1">
      <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a class="game" onclick="go('https://ubg77.github.io/game131022/drive-mad/')">
-        <img style="border-radius: 25px;" src="https://i.imgur.com/DpdevtF.png" ></a>
+        <img style="border-radius: 25px;" src="/assets/images/icons/drive-mad.jpg" ></a>
        <!-- /assets/images/icons/drive-mad.jpg -->
       <p3>Drive Mad</p3>
      </div>
@@ -762,7 +762,7 @@ searchbar.addEventListener("input", function() {
 <div class="row">
   <div class="span1">
      <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a class="game" onclick="go('https://ubg77.github.io/fix/dunkbrush/')">
-        <img style="border-radius: 25px;" src="https://i.imgur.com/C57Dy1b.png" ></a>
+        <img style="border-radius: 25px;" src="/assets/images/icons/dunk-brush.png" ></a>
        <!-- /assets/images/icons/dunk-brush.png -->
       <p3>Dunk Brush</p3>
      </div>
@@ -773,7 +773,7 @@ searchbar.addEventListener("input", function() {
 <div class="row sports">
   <div class="span1">
      <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a class="game" onclick="go('https://g.igroutka.ru/games/164/DXUY0PdIruNOzyM8/dunkers/')">
-        <img style="border-radius: 25px;" src="https://i.imgur.com/ZGaqxhY.jpg" ></a>
+        <img style="border-radius: 25px;" src="/assets/images/icons/dunk-brush.png" ></a>
        <!-- /assets/images/icons/dunk-brush.png -->
       <p3>Dunkers</p3>
      </div>
@@ -794,7 +794,7 @@ searchbar.addEventListener("input", function() {
  <div class="row sim">
   <div class="span1">
      <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://slope-game.github.io/rungame/eagle-ride/')">
-        <img style="border-radius: 25px;" src="https://i.imgur.com/8jBYErK.png" ></a>
+        <img style="border-radius: 25px;" src="/assets/images/icons/eagle-ride.png" ></a>
        <!-- /assets/images/icons/eagle-ride.png -->
       <p3>Eagle Ride</p3>
      </div>
@@ -805,7 +805,7 @@ searchbar.addEventListener("input", function() {
 <div class="row sim">
   <div class="span1">
      <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://webglmath.github.io/eggy-car/')">
-        <img style="border-radius: 25px;" src="https://i.imgur.com/7jD8pa6.png" ></a>
+        <img style="border-radius: 25px;" src="/assets/images/icons/eggy-car.png" ></a>
        <!-- /assets/images/icons/eggy-car.png -->
       <p3>Eggy Car</p3>
      </div>
@@ -816,7 +816,7 @@ searchbar.addEventListener("input", function() {
   <div class="row">
   <div class="span1">
      <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://ubg77.github.io/updatefaqs/elasticman/')">
-        <img style="border-radius: 25px;" src="https://i.imgur.com/DvFXFUb.png" ></a>
+        <img style="border-radius: 25px;" src="/assets/images/icons/elastic-man.jpg" ></a>
        <!-- /assets/images/icons/elastic-man.jpg -->
       <p3>Elastic Man</p3>
      </div>
@@ -827,7 +827,7 @@ searchbar.addEventListener("input", function() {
  <div class="row">
   <div class="span1">
      <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('games/electric_man_2/index.html')">
-        <img style="border-radius: 25px;" src="https://i.imgur.com/Rk5009N.png" ></a>
+        <img style="border-radius: 25px;" src="/assets/images/icons/electricman-2.jpeg" ></a>
        <!-- /assets/images/icons/electricman-2.jpeg -->
       <p3>Electric Man 2</p3>
      </div>
@@ -838,7 +838,7 @@ searchbar.addEventListener("input", function() {
 <div class="row cars">
   <div class="span1">
      <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://webglmath.github.io/endless-truck/')">
-        <img style="border-radius: 25px;" src="https://i.imgur.com/AVfqsX5.png" ></a>
+        <img style="border-radius: 25px;" src="/assets/images/icons/endless-truck1.png" ></a>
        <!-- /assets/images/icons/endless-truck1.png -->
       <p3>Endless Truck</p3>
      </div>
