--- a/src/apps.html
+++ b/src/apps.html
@@ -290,19 +290,6 @@
            </div>
      <div class="row">
             <div class="span1">
-               <div style="padding-top: 5px;" class="card animals" loading="lazy"><a class="game" onclick="go('https://zoro.to')">
-                  <img style="border-radius: 25px;" src="/assets/images/icons/apps/zoro.png"></a>
-                <p3>Zoro</p3>
-                 </div>
-             </div>
-           </div>
-           </div>
-           </div>
-           </div>
-           </div>
-           </div>
-     <div class="row">
-            <div class="span1">
                <div style="padding-top: 5px;" class="card animals" loading="lazy"><a class="game" onclick="go('https://www.ufc.com')">
                   <img style="border-radius: 25px;" src="/assets/images/icons/apps/ufc.png"></a>
                 <p3>UFC</p3>
@@ -313,7 +300,7 @@
            </div>
           <div class="row">
             <div class="span1">
-               <div style="padding-top: 5px;" class="card animals" loading="lazy"><a class="game" onclick="go('https://https://theuselessweb.com')">
+               <div style="padding-top: 5px;" class="card animals" loading="lazy"><a class="game" onclick="go('/https://theuselessweb.com')">
                   <img style="border-radius: 25px;" src="/assets/images/icons/apps/useless-web.png"></a>
                 <p3>Useless Web</p3>
                  </div>
@@ -322,7 +309,7 @@
            </div>
            <div class="row">
             <div class="span1">
-               <div style="padding-top: 5px;" class="card animals" loading="lazy"><a class="game" onclick="go('https://https://https://www.friv.com')">
+               <div style="padding-top: 5px;" class="card animals" loading="lazy"><a class="game" onclick="go('https://www.friv.com')">
                   <img style="border-radius: 25px;" src="/assets/images/icons/apps/friv.png"></a>
                 <p3>Friv</p3>
                  </div>
