--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <script src="assets/js/particles.js"></script>
       <link rel="stylesheet" href="assets/css/particles.css"/>
    <meta name="description" content="Cosmic plans on giving your school the fastest possible wifi speeds. Visit this site to find out more info." />
-  	<title>Home</title>
+  	<title>Cosmic - Home</title>
     <meta name="hilltopads-site-verification" content="1d864429d8ccfef6ce7ff276f3942b31e202fcdb" />
   <link rel="icon" type="image/x-icon" href="assets/images/branding/favicon/in.png">
 	<link rel="shortcut icon" href="assets/images/branding/in.png" type="image/x-icon">
