--- a/src/games.html
+++ b/src/games.html
@@ -1839,7 +1839,7 @@ searchbar.addEventListener("input", function() {
 <div class="row">
   <div class="span1">
      <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a class="game" onclick="go('https://ubg77.github.io/updatefaqs/subway-surfers-bali/')">
-        <img style="border-radius: 25px;" src="https://i.imgur.com/C5H1Jva.png" ></a>
+        <img style="border-radius: 25px;" src="https://im.gurl.eu.org/file/b532d8d027ff02899bc21.png" ></a>
       <p3>SS: Bali</p3>
      </div>
    </div>
@@ -1849,7 +1849,7 @@ searchbar.addEventListener("input", function() {
 <div class="row">
   <div class="span1">
      <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a class="game" onclick="go('https://ubg77.github.io/updatefaqs/subway-surfers-hongkong/')">
-        <img style="border-radius: 25px;" src="https://i.imgur.com/pWMTflt.png" ></a>
+        <img style="border-radius: 25px;" src="https://im.gurl.eu.org/file/a8c4ddf3be2caa47d9767.png" ></a>
       <p3>SS: Havana</p3>
      </div>
    </div>
@@ -1859,7 +1859,7 @@ searchbar.addEventListener("input", function() {
 <div class="row">
   <div class="span1">
      <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a class="game" onclick="go('https://ubg77.github.io/updatefaqs/subway-surfers-mumbai/')">
-        <img style="border-radius: 25px;" src="https://i.imgur.com/DrQimI5.png" ></a>
+        <img style="border-radius: 25px;" src="https://im.gurl.eu.org/file/9bf3c61a0a23d1ff35037.png" ></a>
       <p3>SS: Mumbai</p3>
      </div>
    </div>
@@ -1869,7 +1869,7 @@ searchbar.addEventListener("input", function() {
 <div class="row">
   <div class="span1">
      <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a class="game" onclick="go('https://ubg77.github.io/updatefaqs/subway-surfers-nyc/')">
-        <img style="border-radius: 25px;" src="https://i.imgur.com/VvF9zvX.png" ></a>
+        <img style="border-radius: 25px;" src="https://im.gurl.eu.org/file/07be43a32fc5d389cb1d4.png" ></a>
       <p3>SS: NYC</p3>
      </div>
    </div>
@@ -1879,7 +1879,7 @@ searchbar.addEventListener("input", function() {
 <div class="row">
   <div class="span1">
      <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a class="game" onclick="go('https://ubg77.github.io/updatefaqs/subway-surfers-singapore/')">
-        <img style="border-radius: 25px;" src="https://i.imgur.com/0fiqxNq.png" ></a>
+        <img style="border-radius: 25px;" src="https://im.gurl.eu.org/file/24fc0ae8721125b566788.png" ></a>
       <p3>SS: Singapore</p3>
      </div>
    </div>
@@ -1889,7 +1889,7 @@ searchbar.addEventListener("input", function() {
 <div class="row">
   <div class="span1">
      <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a class="game" onclick="go('https://ubg77.github.io/updatefaqs/subway-surfers-winter-holiday/')">
-        <img style="border-radius: 25px;" src="https://i.imgur.com/r4c6F5y.png" ></a>
+        <img style="border-radius: 25px;" src="https://im.gurl.eu.org/file/c1b1cc7b0b3e1d0d74d50.png" ></a>
       <p3>SS: Winter</p3>
      </div>
    </div>
@@ -1909,7 +1909,7 @@ searchbar.addEventListener("input", function() {
 <div class="row cars">
   <div class="span1">
       <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://ubg77.github.io/edit/super-bike-the-champion/')">
-        <img style="border-radius: 25px;" src="https://i.imgur.com/NMZNGOt.png"></a>
+        <img style="border-radius: 25px;" src="https://im.gurl.eu.org/file/30ab9bc0822051cfc676c.png"></a>
       <p3>Super Bike</p3>
     </div>
   </div>
@@ -1919,7 +1919,7 @@ searchbar.addEventListener("input", function() {
 <div class="row cars">
   <div class="span1">
       <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://www.mathplayground.com/pp-superbike-hero/index.html')">
-        <img style="border-radius: 25px;" src="https://i.imgur.com/GxTr4QD.png"></a>
+        <img style="border-radius: 25px;" src="https://im.gurl.eu.org/file/97c6556a9b4739e9bd733.png"></a>
       <p3>Superbike Hero</p3>
     </div>
   </div>
@@ -1969,7 +1969,7 @@ searchbar.addEventListener("input", function() {
 <div class="row">
   <div class="span1">
       <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://bitlifeonline.github.io/class12523/swingo/')">
-        <img style="border-radius: 25px;" src="https://i.imgur.com/ShY3JN2.png"></a>
+        <img style="border-radius: 25px;" src="https://im.gurl.eu.org/file/14ef7a68e73d251856346.png"></a>
       <p3>Swingo</p3>
     </div>
   </div>
@@ -1979,7 +1979,7 @@ searchbar.addEventListener("input", function() {
 <div class="row">
   <div class="span1">
       <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://ubg77.github.io/edit/swipe-fighter-heroes/')">
-        <img style="border-radius: 25px;" src="https://i.imgur.com/lWOWxVF.png"></a>
+        <img style="border-radius: 25px;" src="https://im.gurl.eu.org/file/cd5381026b623b648ca92.png"></a>
       <p3>Swipe Fighters</p3>
     </div>
   </div>
@@ -2026,7 +2026,7 @@ searchbar.addEventListener("input", function() {
 <div class="row">
   <div class="span1">
       <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://slope-game.github.io/rungame/the-speed-ninja/')">
-        <img style="border-radius: 25px;" src="https://i.imgur.com/Xs9QOMQ.png"></a>
+        <img style="border-radius: 25px;" src="https://im.gurl.eu.org/file/a1c4c44ed62997538e867.png"></a>
       <p3>The Speed Ninja</p3>
     </div>
   </div>
@@ -2036,7 +2036,7 @@ searchbar.addEventListener("input", function() {
 <div class="row">
   <div class="span1">
       <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://ubg77.github.io/game131022/thumb-fighter')">
-        <img style="border-radius: 25px;" src="https://i.imgur.com/JRISQCC.png"></a>
+        <img style="border-radius: 25px;" src="https://im.gurl.eu.org/file/78469e95d1036afce1fab.png"></a>
       <p3>Thumb Fighter</p3>
     </div>
   </div>
@@ -2066,7 +2066,7 @@ searchbar.addEventListener("input", function() {
 <div class="row idle">
   <div class="span1">
       <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://webglmath.github.io/tiny-fishing/')">
-        <img style="border-radius: 25px;" src="https://i.imgur.com/bjyySib.png"></a>
+        <img style="border-radius: 25px;" src="https://im.gurl.eu.org/file/10b4c428e1b3c2c74afd9.png"></a>
       <p3>Tiny Fishing</p3>
     </div>
   </div>
@@ -2076,7 +2076,7 @@ searchbar.addEventListener("input", function() {
 <div class="row">
   <div class="span1">
       <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://slope-game.github.io/new5923/tomb/')">
-        <img style="border-radius: 25px;" src="https://i.imgur.com/oDZ9YBe.png"></a>
+        <img style="border-radius: 25px;" src="https://im.gurl.eu.org/file/d1e046b0f6cbd8851f057.png"></a>
       <p3>Tomb</p3>
     </div>
   </div>
@@ -2086,7 +2086,7 @@ searchbar.addEventListener("input", function() {
 <div class="row cars">
   <div class="span1">
       <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://ubg77.github.io/edit/top-speed-3d/')">
-        <img style="border-radius: 25px;" src="https://i.imgur.com/hNOiCQp.png"></a>
+        <img style="border-radius: 25px;" src="https://im.gurl.eu.org/file/cae7884863bb905fa5019.png"></a>
       <p3>Top Speed 3D</p3>
     </div>
   </div>
@@ -2116,7 +2116,7 @@ searchbar.addEventListener("input", function() {
 <div class="row cars">
   <div class="span1">
       <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://webglmath.github.io/traffic-mania/')">
-        <img style="border-radius: 25px;" src="https://i.imgur.com/oXaHv6t.png"></a>
+        <img style="border-radius: 25px;" src="https://im.gurl.eu.org/file/fe5be1f56e437245ab7a2.png"></a>
       <p3>Traffic Mania</p3>
     </div>
   </div>
@@ -2166,7 +2166,7 @@ searchbar.addEventListener("input", function() {
 <div class="row">
   <div class="span1">
       <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://slope-game.github.io/rungame/tunnel-rush-2/)">
-    <img style="border-radius: 25px;" src="https://i.imgur.com/wiBsM5H.png"></a>
+    <img style="border-radius: 25px;" src="https://im.gurl.eu.org/file/fd44cd56a0b0ffe06b246.png"></a>
       <p3>Tunnel Rush 2</p3>
     </div>
   </div>
@@ -2176,7 +2176,7 @@ searchbar.addEventListener("input", function() {
 <div class="row">
   <div class="span1">
       <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://slope-game.github.io/rungame/tunnel-rush-2/)">
-    <img style="border-radius: 25px;" src="https://i.imgur.com/HQb0EnH.png"></a>
+    <img style="border-radius: 25px;" src="https://im.gurl.eu.org/file/3408725295610f6c938b5.png"></a>
       <p3>Tunnel Rush: Cars</p3>
     </div>
   </div>
@@ -2216,7 +2216,7 @@ searchbar.addEventListener("input", function() {
 <div class="row">
   <div class="span1">
       <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://raw.githack.com/3kh0/3kh0-assets/main/vex3/index.html')">
-        <img style="border-radius: 25px;" src="https://i.imgur.com/aAiRzPe.png"></a>
+        <img style="border-radius: 25px;" src="https://im.gurl.eu.org/file/e7360c48bbde82581c573.png"></a>
       <p3>Vex 3</p3>
     </div>
   </div>
@@ -2226,7 +2226,7 @@ searchbar.addEventListener("input", function() {
 <div class="row">
   <div class="span1">
       <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://raw.githack.com/3kh0/3kh0-assets/main/vex5/index.html')">
-        <img style="border-radius: 25px;" src="https://i.imgur.com/IV7RdCK.png"></a>
+        <img style="border-radius: 25px;" src="https://im.gurl.eu.org/file/f91afc5c303274d629f09.png"></a>
       <p3>Vex 4</p3>
     </div>
   </div>
@@ -2247,7 +2247,7 @@ searchbar.addEventListener("input", function() {
 <div class="row">
   <div class="span1">
       <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://slope-game.github.io/newgame/vex6/')">
-        <img style="border-radius: 25px;" src="https://i.imgur.com/V7pjpKf.png"></a>
+        <img style="border-radius: 25px;" src="https://im.gurl.eu.org/file/4b840f6e5741904a037d6.png"></a>
       <p3>Vex 6</p3>
     </div>
   </div>
@@ -2267,7 +2267,7 @@ searchbar.addEventListener("input", function() {
 <div class="row shooter">
   <div class="span1">
       <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://classroomjq.github.io/class276223/vegasclash3d/')">
-        <img style="border-radius: 25px;" src="https://i.imgur.com/isi6fUW.png"></a>
+        <img style="border-radius: 25px;" src="https://im.gurl.eu.org/file/3697844967319ac42d36b.png"></a>
       <p3>Vegas Clash</p3>
     </div>
   </div>
@@ -2277,7 +2277,7 @@ searchbar.addEventListener("input", function() {
 <div class="row shooter">
   <div class="span1">
       <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://classroomjq.github.io/class276223/subway-clash-3d/')">
-        <img style="border-radius: 25px;" src="https://i.imgur.com/ismJ1LJ.png"></a>
+        <img style="border-radius: 25px;" src="https://im.gurl.eu.org/file/8bbf62908c0ebe19f2c2c.png"></a>
       <p3>Subway Clash</p3>
     </div>
   </div>
@@ -2287,7 +2287,7 @@ searchbar.addEventListener("input", function() {
 <div class="row shooter">
   <div class="span1">
       <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a onclick="go('https://classroomjq.github.io/class276223/winter-clash-3d/')">
-        <img style="border-radius: 25px;" src="https://i.imgur.com/xBDPjcn.png"></a>
+        <img style="border-radius: 25px;" src="https://im.gurl.eu.org/file/04d6b504eacd5379718c5.png"></a>
       <p3>Winter Clash</p3>
     </div>
   </div>
@@ -2308,7 +2308,7 @@ searchbar.addEventListener("input", function() {
 <div class="row">
   <div class="span1">
       <div style="padding-top: 5px;border-radius: 25px 25px 25px 25px;" class="card animals" loading="lazy"><a  class="animals" onclick="go('https://raw.githack.com/3kh0/3kh0-assets/main/xx142-b2exe/index.html')">
-        <img style="border-radius: 25px;" src="https://i.imgur.com/ThL4ee5.png"></a>
+        <img style="border-radius: 25px;" src="https://im.gurl.eu.org/file/3bd7ab71892eca1a06aaf.png"></a>
       <p3>xx142-b2exe</p3>
     </div>
   </div>
